fix(align): fix tag alignment

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
 header{
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 #index-header h1 {
@@ -90,13 +91,14 @@ header{
 }
 
 #tag{
-  position: fixed;
+  /* position: fixed; */
   color: #e4b363;
   font-family: "Aladin";
   top: 110px;
   left: 50%;
   font-size: 20px;
-  transform: translateX(-50%);
+  text-align: center;
+  /* transform: translateX(-50%); */
 }
 
 #tag a{
